syntax = "proto3";
package communication;

import "rpc_relationships.proto";
import "rpc_search.proto";

service RelationshipService {
    // Создание нового запроса на установление отношений (заявка в друзья)
    rpc CreateRelationship(CreateRelationshipRequest) returns (CreateRelationshipResponse) {};
    
    // Обновление существующих отношений (принятие/отклонение заявки, блокировка)
    rpc UpdateRelationship(UpdateRelationshipRequest) returns (UpdateRelationshipResponse) {};

    // Получение списка отношений пользователей
    rpc GetRelationships(GetRelationshipsRequest) returns (GetRelationshipsResponse) {};

    // Получение статуса отношений с конкретным пользователем
    rpc GetRelationshipStatus(GetRelationshipStatusRequest) returns (GetRelationshipStatusResponse) {};
}

service SearchService {
    rpc GetSearch(SearchRequest) returns (SearchResponse) {};
}